--- a/sidenav.html
+++ b/sidenav.html
@@ -9,11 +9,158 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
   <link rel="stylesheet" href="./stylesheet/sidenav.css">
   <link rel="stylesheet" href="./stylesheet/style.css" />
+  <link rel="stylesheet" href="./stylesheet/heatmap.css" />
   <!-- Boxiocns CDN Link -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- material icon  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- Heat Map -->
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
+    <script type="text/javascript" src="./js/heatmap.js"></script>
+    <link href="./js/heatmap.js" media="all" rel="stylesheet" />
+  
+    <!-- Google pie chart -->
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  
+    <script type="text/javascript">
+      //Generate random number between min and max
+      function randomInt(min, max) {
+        return Math.floor(Math.random() * (max - min + 1) + min);
+      }
+  
+      function getRandomTimeStamps(min, max, fromDate, isObject) {
+        var return_list = [];
+  
+        var entries = randomInt(min, max);
+        for (var i = 0; i < entries; i++) {
+          var day = fromDate ? new Date(fromDate.getTime()) : new Date();
+  
+          //Genrate random
+          var previous_date = randomInt(0, 365);
+          if (!fromDate) {
+            previous_date = -previous_date;
+          }
+          day.setDate(day.getDate() + previous_date);
+  
+          if (isObject) {
+            var count = randomInt(1, 20);
+            return_list.push({
+              timestamp: day.getTime(),
+              count: count
+            });
+          } else {
+            return_list.push(day.getTime());
+          }
+  
+  
+        }
+  
+        return return_list;
+  
+      }
+      $(document).ready(function () {
+  
+  
+        $('#github_chart_1').github_graph({
+          //Generate random entries from 50-> 200 entries
+          data: getRandomTimeStamps(50, 500, null, false),
+          texts: ['completed task', 'completed tasks']
+        });
+  
+  
+        $('#heatmap').github_graph({
+          //Generate random entries from 10-> 100 entries
+          data: getRandomTimeStamps(10, 100, null, false),
+          texts: ['problem solved', 'problems solved'],
+          //override colours
+          colors: ['rgba(0,0,0,0.3)', '#d6e685', '#8cc665', '#44a340', '#44a340'],
+        });
+        // start from 1 Jan 2022
+        var start_from_2022 = new Date(2022, 00, 00, 0, 0, 0);
+  
+        $('#github_chart_3').github_graph({
+          start_date: start_from_2022,
+          //Generate random entries from 10-> 100 entries
+          data: getRandomTimeStamps(5, 100, start_from_2022, true),
+          texts: ['category', 'categories'],
+          border: {
+            radius: 5,
+            hover_color: "red"
+          },
+          //Override month names
+          month_names: ['T1', 'T2', 'T3', 'T4', 'T5', 'T6', 'T7', 'T8', 'T9', 'T10', 'T11', 'T12'],
+          h_days: ['2', '4', '6'],
+          //override colours with custom count
+          colors: [{
+              count: 0,
+              color: 'gray'
+            },
+            {
+              count: 5,
+              color: 'purple'
+            },
+            {
+              count: 10,
+              color: 'yellow'
+            },
+            {
+              count: 15,
+              color: 'green'
+            },
+            {
+              count: 20,
+              color: 'red'
+            }
+          ],
+          // callback when click on selected date
+          click: function (date, count) {
+            alert('You clicked on: ' + date + ' with count is ' + count);
+          },
+        });
+  
+      });
+  
+      google.charts.load('current', {'packages':['corechart']});
+       google.charts.setOnLoadCallback(drawChart);
+   
+       function drawChart() {
+   
+         var data = google.visualization.arrayToDataTable([
+           ['Task', 'Hours per Day'],
+           ['Label 1',     11],
+           ['Label 2',      2],
+           ['Label 3',  2],
+           ['Label 4', 2],
+           ['Label 5',    7],
+           ['Label 6', 10]
+         ]);
+  
+         var options = {
+           title: 'Verdict',
+           backgroundColor: '#2d2f34',
+           titleTextStyle: {
+              color: 'white'
+           },
+           legend: { position: 'left', textStyle: { color: 'white' } }
+         };
+  
+         var options_2 = {
+           title: 'languages',
+           backgroundColor: '#2d2f34',
+           titleTextStyle: {
+              color: 'white'
+           },
+           legend: { position: 'left', textStyle: { color: 'white'} }
+         };
+   
+         var chart = new google.visualization.PieChart(document.querySelector('.piechart'));
+         chart.draw(data, options);
+  
+         var chart_2 = new google.visualization.PieChart(document.querySelector('.piechart_2'));
+         chart_2.draw(data, options_2);
+       }
+    </script>
 </head>
 
 <body id="body-pd">
