--- a/sidenav.html
+++ b/sidenav.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="./stylesheet/sidenav.css">
   <link rel="stylesheet" href="./stylesheet/style.css" />
   <link rel="stylesheet" href="./stylesheet/heatmap.css" />
+  <link rel="stylesheet" href="./stylesheet/profile.css">
   <!-- Boxiocns CDN Link -->
   <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -94,25 +95,25 @@
         h_days: ['2', '4', '6'],
         //override colours with custom count
         colors: [{
-            count: 0,
-            color: 'gray'
-          },
-          {
-            count: 5,
-            color: 'purple'
-          },
-          {
-            count: 10,
-            color: 'yellow'
-          },
-          {
-            count: 15,
-            color: 'green'
-          },
-          {
-            count: 20,
-            color: 'red'
-          }
+          count: 0,
+          color: 'gray'
+        },
+        {
+          count: 5,
+          color: 'purple'
+        },
+        {
+          count: 10,
+          color: 'yellow'
+        },
+        {
+          count: 15,
+          color: 'green'
+        },
+        {
+          count: 20,
+          color: 'red'
+        }
         ],
         // callback when click on selected date
         click: function (date, count) {
@@ -122,45 +123,45 @@
 
     });
 
-    google.charts.load('current', {'packages':['corechart']});
-     google.charts.setOnLoadCallback(drawChart);
- 
-     function drawChart() {
- 
-       var data = google.visualization.arrayToDataTable([
-         ['Task', 'Hours per Day'],
-         ['Label 1',     11],
-         ['Label 2',      2],
-         ['Label 3',  2],
-         ['Label 4', 2],
-         ['Label 5',    7],
-         ['Label 6', 10]
-       ]);
+    google.charts.load('current', { 'packages': ['corechart'] });
+    google.charts.setOnLoadCallback(drawChart);
 
-       var options = {
-         title: 'Verdict',
-         backgroundColor: '#2d2f34',
-         titleTextStyle: {
-            color: 'white'
-         },
-         legend: { position: 'left', textStyle: { color: 'white' } }
-       };
+    function drawChart() {
 
-       var options_2 = {
-         title: 'languages',
-         backgroundColor: '#2d2f34',
-         titleTextStyle: {
-            color: 'white'
-         },
-         legend: { position: 'left', textStyle: { color: 'white'} }
-       };
- 
-       var chart = new google.visualization.PieChart(document.querySelector('.piechart'));
-       chart.draw(data, options);
+      var data = google.visualization.arrayToDataTable([
+        ['Task', 'Hours per Day'],
+        ['Label 1', 11],
+        ['Label 2', 2],
+        ['Label 3', 2],
+        ['Label 4', 2],
+        ['Label 5', 7],
+        ['Label 6', 10]
+      ]);
 
-       var chart_2 = new google.visualization.PieChart(document.querySelector('.piechart_2'));
-       chart_2.draw(data, options_2);
-     }
+      var options = {
+        title: 'Verdict',
+        backgroundColor: '#2d2f34',
+        titleTextStyle: {
+          color: 'white'
+        },
+        legend: { position: 'left', textStyle: { color: 'white' } }
+      };
+
+      var options_2 = {
+        title: 'languages',
+        backgroundColor: '#2d2f34',
+        titleTextStyle: {
+          color: 'white'
+        },
+        legend: { position: 'left', textStyle: { color: 'white' } }
+      };
+
+      var chart = new google.visualization.PieChart(document.querySelector('.piechart'));
+      chart.draw(data, options);
+
+      var chart_2 = new google.visualization.PieChart(document.querySelector('.piechart_2'));
+      chart_2.draw(data, options_2);
+    }
   </script>
 </head>
 
@@ -263,6 +264,27 @@
       <span class="text">Codeforces <span class="text2"> Tracker</span></span>
     </div> -->
 
+    <!-- Profile Card Start header -->
+    <div id="particles-js"></div>
+    <div class="name_container">
+      <img src="./img/Profile Img.png" class="profile_img">
+      <h4 class="profile_img_text">tourist</h4>
+      <h3 class="profile_img_rank">Legendary Grandmaster</h3>
+      <div class="name_content">
+        <h2 class="name_text">Rank: Legendary Grandmaster</h2>
+        <h2 class="name_text">Name: Gennady Korotkevich</h2>
+        <h2 class="name_text">From: Gomel, Belarus From ITMO University</h2>
+        <br>
+        <h2 class="name_text">Last visit: <span class="online_text">online now</span></h2>
+        <h2 class="name_text">Registered: 12 year ago</h2>
+      </div>
+    </div>
+    <div class="rating_container">
+      <h2 class="rating_title1">Contest rating 3707</h2>
+      <h2 class="rating_title2">Contribution +178</h2>
+      <h2 class="rating_title3">Friends 36,950</h2>
+    </div>
+    <!-- Profile Card End Here -->
     <div class="container">
       <div class="col mt-3 mb-4">
         <div class=" col mt-1 ms-1 me-1 titles">
@@ -299,26 +321,31 @@
   <section class="footer">
 
     <div class="foot">
-          Socials
-            <a href="https://github.com/wasim7raja10/Codeforces-tracker">
-              <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
-                <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
-                <a src="https://github.com/wasim7raja10/Codeforces-tracker"></a>
-              </svg>
-            </a>
+      Socials
+      <a href="https://github.com/wasim7raja10/Codeforces-tracker">
+        <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="currentColor" class="bi bi-github"
+          viewBox="0 0 16 16">
+          <path
+            d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
+          <a src="https://github.com/wasim7raja10/Codeforces-tracker"></a>
+        </svg>
+      </a>
     </div>
 
     <div class="foot">
       codeforcer tracker
-    </div> 
+    </div>
   </section>
 
 
   <script src="./js/script.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
-  </script>
+    </script>
   <script src="./js/data.js"></script>
+  <script src='https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js'></script>
+  <script src='https://threejs.org/examples/js/libs/stats.min.js'></script>
+  <script src="./js/profile.js"></script>
 
 </body>
 
