--- a/sidenav.html
+++ b/sidenav.html
@@ -10,6 +10,10 @@
       integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
       crossorigin="anonymous"
     />
+        <!-- Font Awesome -->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css" />
+        <!-- Google Fonts Roboto -->
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" />
     <link rel="stylesheet" href="./stylesheet/sidenav.css" />
     <link rel="stylesheet" href="./stylesheet/style.css" />
     <link rel="stylesheet" href="./stylesheet/heatmap.css" />
@@ -26,7 +30,6 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-
     <!-- Heat Map -->
     <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
     <script type="text/javascript" src="./js/heatmap.js"></script>
@@ -392,11 +395,11 @@
     <section class="home-section" id="header">
       <div class="home-content header__toggle">
         <i class="bx bx-menu" id="header-toggle"></i>
-        <span class="text">Codeforces <span class="text2"> Tracker</span></span>
-      </div>
+        <span class="text ">Codeforces <span class="text2"> Tracker</span></span>
+      </div><br>
 
         <!-- Profile card -->
-        <div class="container">
+        <div class="container pt-5">
           <div class="col mt-3 mb-5">
             <div class="profile-card ">
               <div class="card-header" id="particles-js"></div>
@@ -461,33 +464,39 @@
             </div>
           </div><br>
 
-          <!-- Heatmap -->
+      <!-- Heatmap -->
       <div class="container">
         <div class="col mt-3 mb-4">
-          <div class="col mt-1 ms-1 me-1 titles">
-            <span class="row ms-4 graphtitles">Year Log</span>
-            <div class="row graphtitle">
-              <h5 class="heatmap-heading">2784 Problem Solved</h5>
-              <p class="para">Solved for all times</p>
-              <h5 class="heatmap-heading">7 Days</h5>
-              <p class="para">in a row in matrix</p>
+          <div class="card text-center" id="heatmap-card">
+            <div class=" col titles">
+              <span class="row mt-1 ms-4 mb-1 graphtitles ">Year Logs</span>
             </div>
-            <div class="row graphtitle">
-              <h5 class="heatmap-heading">455 Problems</h5>
-              <p class="para">problems sloved for last year</p>
-              <h5 class="heatmap-heading">5 Days</h5>
-              <p class="para">in a row for last year</p>
+            <div class="card-body chart col ps-2 mb-4"  id="heatmap">
             </div>
-            <div class="row graphtitle">
-              <h5 class="heatmap-heading">32 Problems</h5>
-              <p class="para">Solved for last month</p>
-              <h5 class="heatmap-heading">2 Days</h5>
-              <p class="para">in a row for last month</p>
+            <div class="heatmap-footer mb-4 text-center"> 
+                <div class="row graphtitle text-start">
+                  <h5 class="heatmap-heading">2784 Problem Solved</h5>
+                  <p class="para mb-4">Solved for all times</p>
+                  <h5 class="heatmap-heading">7 Days</h5>
+                  <p class="para">in a row in matrix</p>
+                </div>
+                <div class="row graphtitle text-start">
+                  <h5 class="heatmap-heading">455 Problems</h5>
+                  <p class="para mb-4">problems sloved for last year</p>
+                  <h5 class="heatmap-heading">5 Days</h5>
+                  <p class="para">in a row for last year</p>
+                </div>
+                <div class="row graphtitle text-start">
+                  <h5 class="heatmap-heading">32 Problems</h5>
+                  <p class="para mb-4">Solved for last month</p>
+                  <h5 class="heatmap-heading">2 Days</h5>
+                  <p class="para">in a row for last month</p>
+                </div>
+              </div>
             </div>
-          </div>
-          <div class="chart col ms-1 me-1 ps-2 mb-4" id="heatmap"></div>
         </div>
       </div>
+     
       
        <!-- histogram -->
        <div class="histogram container">
@@ -495,8 +504,8 @@
           <div class="chart_container row">
             <div class="col-sm-6 ">
               <div class="card">
-                <div class=" col mt-1 ms-1 me-1 titles">
-                  <span class="row ms-4 mb-1 graphtitles ">Levels</span>
+                <div class=" col titles">
+                  <span class="row mt-1 ms-4 mb-1 graphtitles ">Levels</span>
                 </div>
                 <div class="card-body" id="columnchart_values">
                 </div>
@@ -504,8 +513,8 @@
             </div>
             <div class="col-sm-6">
               <div class="card">
-                <div class=" col mt-1 ms-1 me-1 titles">
-                  <span class="row ms-4 mb-1 graphtitles ">Power Ranking</span>
+                <div class=" col titles">
+                  <span class="row mt-1 ms-4 mb-1 graphtitles ">Power Ranking</span>
                 </div>
                 <div class="card-body" id="columnchart_values_2" ">
                 </div>
@@ -515,28 +524,21 @@
           </div>
         </div>
 
-    </section>
-    <section class="footer mt-4" >
-      <div class="foot">
-        Socials
-        <a href="https://github.com/wasim7raja10/Codeforces-tracker">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="18"
-            height="18"
-            fill="currentColor"
-            class="bi bi-github"
-            viewBox="0 0 16 16"
-          >
-            <path
-              d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"
-            />
-            <a src="https://github.com/wasim7raja10/Codeforces-tracker"></a>
-          </svg>
-        </a>
-      </div>
+       <!-- footer -->
+        <footer class=" text-center text-white" style="background-color: #1F1B24;">
+            <section class="mb-">
+              <!-- Github -->
+              <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/wasim7raja10/Codeforces-tracker" role="button" target=”_blank” 
+                ><i class="fab fa-github"></i
+              ></a>
+            </section>
+          <!-- Copyright -->
+          <div class="text-center p-3" style="background-color: #1F1B24;">
+            © 2021 Copyright:
+            <span class="text-white" href="https://mdbootstrap.com/">Codeforces Tracker</span>
+          </div>
+        </footer> 
 
-      <div class="foot">codeforcer tracker</div>
     </section>
 
     <script src="./js/script.js"></script>
